# swigCmake

./: CMakeLists.txt  IgConnection.cpp  IgConnection.h  README.md  swig.i
